--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -51,5 +51,34 @@
       flex-wrap: wrap;
       justify-content: center;
     }
+
+
+    .rechercher {
+      display: flex;
+      justify-content: center;
+      margin-left: 50%;
+      transform: translateX(-50%);
+      margin-bottom: 10px;
+      width: 100vw;
+
+      input[type="text"] {
+        border-radius: 50px;
+        text-align: center;
+        border: none;
+
+        &:focus{
+          border: 3px solid green;
+        }
+      }
+
+      button{
+        margin-left: 5px;
+        border-radius: 50px;
+        padding: 15px;
+      }
+
+    }
+    
+
   }
   
